# planet-vector-tile

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  Cargo.toml  LICENSE.md  Procfile  README.md  build.rs  gen_fbs.sh  index.d.ts  index.js  install.sh  job.js  manifest.toml  napi.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: CI.yml
core/: Cargo.toml
core/src/: main.rs  tile.rs
debug/: debug_style.json  package.json  simple.css  simple.html  simple.js
desktop/: .gitignore  .prettierignore  README.md  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
desktop/components/: Features.tsx  Info.tsx  Map.module.css  Map.tsx  Nav.tsx  Nav2.tsx  RightPanel.tsx
desktop/pages/: _app.tsx  (+1 more)
docs/: aws.md  gcloud.md  hilbert.md  planet.txt  reports.md
electron/: bench.html  bench.js  main.js  package-lock.json  package.json  simple.css  simple.html  simple.js  sprites@2x.json
fbs/: planet.fbs  planet_vector_tile.fbs
manifests/: admin.toml  basic.toml  basic.yaml  full_planet.toml  full_planet.yaml  relations.yaml  santa_cruz.yaml
node/: Cargo.toml  index.js  package-lock.json  package.json
notes/: bad_geom.geojson  debug-kings-village.txt  debug_california_boundary.txt  hilbert_tree.txt  osm-sources.txt  panic.txt  render.md  reports.md  sources.txt  tag-size-impact.txt  text-tree.txt  todo.txt  troubleshoot_leaf_ext.txt  upload.txt
planet-electron/: README.md
planet_core/: .gitignore  Cargo.toml  gen_fbs.sh  package-lock.json  package.json  tsconfig.json
planet_electron/: .prettierrc  README.md  package-lock.json  package.json
planet_node/: Cargo.toml  hello.js  index.d.ts  index.js  package-lock.json  package.json
schema/: fileformat.proto  osm.flatdata  osmformat.proto  planet_vector_tile.fbs
src/: args.rs  commands.rs  convert.rs  dm7.rs  external.rs  filter.rs  fixtures.rs  gdal.rs  hilbert.rs  hilbert_compose.rs  hilbert_leaves.rs  info.rs  info_tile.rs  ingest.rs  lib.rs  location.rs  main.rs  manifest.rs  mutant.rs  parallel.rs  pvt.rs  pvt_builder.rs  pvt_yaml.rs  relation.rs  relation_parser.rs  report.rs  rules.rs  sort.rs  sort_archive.rs  source.rs  taginfo.rs  tile.rs  tile_attributes.rs  tile_info.rs  u40.rs  util.rs
styles/: data.json  default.json
test/: index.spec.mjs
tests/: index.spec.mjs  integration_tests.rs
ts/: planet-vector-tile.ts
(+176 files in other folders)
