[package]
edition = "2021"
name = "planet-vector-tile"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fast_hilbert = "0.1"
flatbuffers = "2.1.2"
futures = "0.3.24"
indexmap = "1.9.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["async", "tokio_full"] }
napi-derive = { version = "2.7.0", features = ["type-def"] }
queue = "0.3.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
