[package]
edition = "2021"
name = "planet-vector-tile"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pvt"
path = "src/main.rs"

[dependencies]
ahash = "0.8.0"
byteorder = "1.4.3"
clap = { version = "4.0.18", features = ["derive"] }
crossbeam = "0.8.2"
dyn-clone = "1.0.9"
env_logger = "0.9.1"
fast_hilbert = "2.0.0"
flatbuffers = "22.9.29"
flatdata = "0.5.3"
flate2 = "1.0.24"
futures = "0.3.24"
geo = "0.23.0"
humantime = "2.1.0"
indexmap = "1.9.1"
itertools = "0.10.5"
log = "0.4.17"
memmap2 = "0.5.7"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["async", "tokio_full"] }
napi-derive = { version = "2.7.0", features = ["type-def"] }
parking_lot = "0.12.1"
pbr = "1.0.4"
prost = "0.11.0"
prost-build = "0.11.1"
prost-types = "0.11.1"
queue = "0.3.1"
rayon = "1.5.3"

[build-dependencies]
napi-build = "2.0.1"
prost-build = "0.11.1"

[profile.release]
lto = true

[dev-dependencies]
proptest = "1.0.0"
